Alteração de lógica -Alterado métodos para atender modificações feitas no servidor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ quarkus.datasource.password=abc123
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:56028/oversee
 quarkus.datasource.jdbc.max-size=16
 quarkus.hibernate-orm.database.generation=drop-and-create
+
+quarkus.http.cors=true
+quarkus.http.cors.origins=*
+quarkus.http.cors.methods=POST, GET, PUT, OPTIONS, DELETE
+quarkus.http.cors.headers=Content-Type, Access-Control-Allow-Headers, Authorization
+quarkus.http.cors.access-control-allow-credentials=false
